--- a/spring-security/src/main/webapp/WEB-INF/web.xml
+++ b/spring-security/src/main/webapp/WEB-INF/web.xml
@@ -23,7 +23,7 @@
 	</context-param>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>com.packt.springsecurity.frontend.spring com.packt.springsecurity.backend.spring</param-value>
+		<param-value>com.packt.springsecurity.common.spring com.packt.springsecurity.frontend.spring com.packt.springsecurity.backend.spring</param-value>
 	</context-param>
 	<context-param>
 		<param-name>spring.profiles.active</param-name>
