--- a/section3/s3_vid1/pom.xml
+++ b/section3/s3_vid1/pom.xml
@@ -4,7 +4,7 @@
 Section 3 - Video 1</description>
 	<name>spring-security</name>
 
-	<groupId>com.packt</groupId>
+	<groupId>com.packt.s3</groupId>
 	<artifactId>spring-security</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
