--- a/section1/s1_vid1/pom.xml
+++ b/section1/s1_vid1/pom.xml
@@ -3,7 +3,7 @@
 	<description>Packt - Spring Security - Video Course</description>
 	<name>spring-security</name>
 
-	<groupId>com.packt</groupId>
+	<groupId>com.packt.s1</groupId>
 	<artifactId>spring-security</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
