--- a/section2/s2_vid4/pom.xml
+++ b/section2/s2_vid4/pom.xml
@@ -4,7 +4,7 @@
 Section 2 - Video 4</description>
 	<name>spring-security</name>
 
-	<groupId>com.packt</groupId>
+	<groupId>com.packt.s2</groupId>
 	<artifactId>spring-security</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
