--- a/section6/s6_vid3/pom.xml
+++ b/section6/s6_vid3/pom.xml
@@ -4,7 +4,7 @@
 Section 6 - Video 3</description>
 	<name>spring-security</name>
 
-	<groupId>com.packt</groupId>
+	<groupId>com.packt.s6</groupId>
 	<artifactId>spring-security</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
