--- a/section1/s1_vid4/pom.xml
+++ b/section1/s1_vid4/pom.xml
@@ -5,7 +5,7 @@ Section 1 - Video 4</description>
 	<name>spring-security</name>
 
 	<groupId>com.packt.s1</groupId>
-	<artifactId>spring-security</artifactId>
+	<artifactId>spring-security.v4</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
