--- a/section4/s4_vid3/pom.xml
+++ b/section4/s4_vid3/pom.xml
@@ -5,7 +5,7 @@ Section 4 - Video 3</description>
 	<name>spring-security</name>
 
 	<groupId>com.packt.s4</groupId>
-	<artifactId>spring-security</artifactId>
+	<artifactId>spring-security.v3</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
