--- a/section5/s5_vid1/.project
+++ b/section5/s5_vid1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>spring-security</name>
+	<name>spring-security-s5-v1</name>
 	<comment></comment>
 	<projects>
 	</projects>
