--- a/section6/s6_vid1/pom.xml
+++ b/section6/s6_vid1/pom.xml
@@ -5,7 +5,7 @@ Section 6 - Video 1</description>
 	<name>spring-security</name>
 
 	<groupId>com.packt.s6</groupId>
-	<artifactId>spring-security</artifactId>
+	<artifactId>spring-security.v1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
