--- a/section6/s6_vid2/.project
+++ b/section6/s6_vid2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>spring-security</name>
+	<name>spring-security-s6-v2</name>
 	<comment></comment>
 	<projects>
 	</projects>
