--- a/section7/s7_vid3/pom.xml
+++ b/section7/s7_vid3/pom.xml
@@ -5,7 +5,7 @@ Section 7 - Video 3</description>
 	<name>spring-security</name>
 
 	<groupId>com.packt.s7</groupId>
-	<artifactId>spring-security-v3</artifactId>
+	<artifactId>spring-security.v3</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
