--- a/section5/s5_vid3_done/.project
+++ b/section5/s5_vid3_done/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>spring-security-s5-v4</name>
+	<name>spring-security-s5-v3-done</name>
 	<comment></comment>
 	<projects>
 	</projects>
