--- a/section2/s2_vid3_done/pom.xml
+++ b/section2/s2_vid3_done/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<description>Packt - Spring Security - Video Course
-Section 2 - Video 4</description>
+Section 2 - Video 3 - Done</description>
 	<name>spring-security</name>
 
 	<groupId>com.packt.s2</groupId>
-	<artifactId>spring-security.v4</artifactId>
+	<artifactId>spring-security.v3-done</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
